<resources>
    <string name="app_name">FIT4U</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="health_app">F I T 4 U</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hi_there">Hi there! Nice to see you again.</string>
    <string name="welcome_thanks_for_joining">Welcome! Thanks for joining.</string>
    <string name="example_username">Enter username</string>
    <string name="example_email">example@email.com</string>
    <string name="enter_password">Enter password</string>
    <string name="no_results">No Results</string>
    <string name="search_exercise_dummy">Search Exercise</string>
    <string name="text">TEXT</string>
    <string name="textview">TextView</string>
    <string name="today_exercise_dummy">Todays Exercise</string>
    <string name="record">Personal Information</string>
    <string name="height">Height</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="weight">Weight</string>
    <string name="lbs">LBS</string>
    <string name="kg">KG</string>
    <string name="dob">Date of Birth</string>
    <string name="avatar">Choose an Avatar</string>
    <string name="enter_height_feet">5</string>
    <string name="enter_height_inches">8</string>
    <string name="enter_weight">180</string>
    <string name="enter_age">Enter Age</string>
    <string name="submit">Submit</string>
    <string-array name="weight_array">
        <item>LBS</item>
        <item>KG</item>
    </string-array>
    <string name="guest">Username</string>
    <string name="profile">Home</string>
    <string name="calendar">Calendar</string>
    <string name="workouts">Workouts</string>
    <string name="information">Information</string>
    <string name="action_settings">Settings</string>
    <string name="action_timer">Timer</string>
    <string name="calories">Calories Burned</string>
    <string name="workout_title">Workout Calendar</string>
    <string name="plank">1. Begin in the plank position, face down with your forearms and toes on the floor. Your elbows are directly under your shoulders and your forearms are facing forward. Your head is relaxed and you should be looking at the floor.\n
        2. Engage your abdominal muscles. Keep your torso straight and rigid and your body in a straight line from ears to toes with no sagging or bending. Ensure your shoulders are down and your heels should be over the balls of your feet.\n
        3. Hold this position then release to the floor.</string>
    <string name="pull_up">1. Grasp the bar with an overhand grip, arms and shoulders fully extended.\n
        2. Pull your body up until your chin is above the bar.\n
        3. Lower your body back to starting position.</string>
    <string name="push_up">1. Get down on all fours, placing your hands slightly wider than your shoulders.\n
        2. Straighten your arms and legs.\n
        3. Lower your body until your chest nearly touches the floor\n
        4. Pause, then push yourself back up.</string>
    <string name="sit_up">1. Lie down on your back, keep your knees bent and your back and feet flat on the mat.\n
        2. Slowly lift your torso and sit up.\n
        3. Return to the starting position by rolling down one vertebrae at a time.</string>
    <string name="squat">1. Stand with your feet shoulder-width apart. Maintain the natural arch in your back, squeezing your shoulder blades and raising your chest.\n
        2. Grip the bar across your shoulders and support it on your upper back. Unwrack the bar by straightening your legs, and take a step back.\n
        3. Bend your knees as you lower the weight without altering the form of your back until your hips are below your knees.\n
        4.Raise the bar back to starting position, lift with your legs and exhale at the top.</string>
    <string name="oblique_twist">1. Lie down with your legs bent at the knees.\n
        2. Elevate your upper body so that it creates a V shape with your thighs.\n
        3. Twist your torso to the right, and then reverse the motion, twisting it to the left.</string>
    <string name="bench_press">1. Lay flat on the bench with your feet on the ground. With straight arms unrack the bar.\n
        2. Lower the bar to your mid chest\n
        3. Raise the bar until you\'ve locked your elbows.</string>
    <string name="deadlift">1. Stand with your mid-foot under the bar and grip the bar with your hands, about a shoulder width apart.\n
        2. Bend your knees, then lift the bar by straightening your back. It is important to keep your back straight.\n
        3. Stand to your full height and hold.\n
        4. Lower the bar to the floor by bending your knees and keeping your back straight.</string>
    <string name="tricep_pulldown">1. Grip the pulley bar with palms facing down at shoulder width.\n
        2. Stand straight with a small forward incline. Keep your upper arms close to your body, and slowly bring the pulley bar down until your arms are fully extended.\n
        3. Pause when you are at the contracted position of the motion, then slowly raise the pulley bar back to the starting point.</string>
    <string name="pulley_crunch">1. Stand directly in front of the cable machine, facing away from it.\n
        2. Grasp the rope from behind your head with your palms facing inward and drop to your knees.\n
        3. Your buttocks should be resting on top of your feet. Keeping your elbows bent and hands at either head height or shoulder height, crunch down as far as possible.\n
        4. Pause, then slowly lower yourself back to the starting position.</string>
    <string name="floor_crunch">1. Lay flat on your back with your knees bent and your feet flat on the ground, about a foot from your lower back.\n
        2. Place your fingertips on your temples with your palms facing out.\n
        3. Draw your belly into the base of your spine to engage the muscles, then raise your head and shoulders off the floor. Return to starting position and repeat.</string>
    <string name="overhead_tricep_extension">1. Sit on a bench or chair cupping one end of a dumbbell in both hands directly overhead. This is the starting position.\n
        2. Keeping your chest up, core engaged, and back straight, lower the weight behind your head without moving your upper arms.\n
        3. Pause, and then press the weight back up to the starting position.</string>
    <string name="seated_pulley_row">1. Sit upright on the bench and plant your feet on the floor or foot pads, knees bent. Extend your arms and hold the handle or cable. Move your shoulders back and down. Brace your core.\n
        2. Exhale. Bend your elbows to pull the handle or cable, keeping your elbows tucked in and your back neutral. Pause for 1 second.\n
        3. Inhale and slowly extend your arms, counting to 3</string>
    <string name="shrug">1. Sit on a bench with dumbbells in both hands, palms facing your body, back straight.\n
        2. Elevate your shoulders and hold the contracted position at the apex of the motion.\n
        3. Slowly lower your shoulders back to starting position.</string>
    <string name="calf_raise">1. Get comfortable on the machine, then place your lower thighs beneath the padded lever. Place your toes and the balls of your feet onto the foot supports.\n
        2. Prevent the weight from slipping forward by gripping the handles, and release the safety bar. Lower the weight until your calves are extended.\n
        3. Push your heels up to lift the padded lever and hold the contracted position, then slowly lower back down to the starting position. Repeat.</string>
    <string name="romanian_deadlift">1. Stand up tall with your feet shoulder-width apart and hold a dumbbell in each hand.\n
        2. Push your hips back and lower the dumbbells, while keeping your legs straight or only slightly bent.\n
        3. Return to the starting position and repeat</string>
    <string name="front_raise">1. Grab two dumbbells while standing upright with the dumbbells at your side.\n
        2. Raise the two dumbbells with your elbows being fully extended until the dumbbells are eye level.\n
        3. Lower the weights in a controlled manner to the starting position and repeat.</string>
    <string name="bicep_curl">1. While holding the upper arms stationary, curl the weights forward while contracting the biceps as you breathe out.\n
        2. Continue the movement until your biceps are fully contracted and the bar is at shoulder level.\n
        3. Hold the contracted position for a second and squeeze the biceps hard.\n
        4. Slowly bring the weight back down to the starting position.</string>
    <string name="incline_press">1. Raise the bench to a 30° - 45° angle\n
        2. Lay on the bench and set your feet on the ground.\n
        3. Raise the dumbbells with straight arms then slowly lower them to about shoulder width.\n
        4. Raise them again until your arms are locked and at the starting position again.</string>
    <string name="side_raise">1. Stand up straight with dumbbells at either side, palms facing your hips.\n
        2. Raise your arms on either side with a slight bend in your elbow until they are parallel with the floor. Pause at the top of the motion.\n
        3. Slowly return your arms down to starting position.</string>
    <string name="hand_grippers">1. Push only with your thumb, with your other four fingers wrapped around the bottom handle of the grip.\n
        2. Reverse the grip and perform the exercise with your four fingers wrapped around the top.</string>
    <string name="shoulder_press">1. Sit on a bench with back support. Raise the dumbbells to shoulder height with your palms forward.\n
        2. Raise the dumbbells upwards and pause at the contracted position.\n
        3. Lower the weights back to starting position.</string>
    <string name="overhead_press">1. Stand upright and keep the back straight.\n
        2. Hold a dumbbell in each hand at the shoulders with an overhand grip. Thumbs should be on the inside and knuckles facing up.\n
        3. Raise the weights above the head in a controlled motion while exhaling. Pause at the top of the motion.\n
        4. Return the dumbbells to the shoulders while inhaling.</string>
    <string name="hamstring_curl">1. Lay down on the machine, placing your legs beneath the padded lever. Position your legs so that the padded lever is below your calve muscles.\n
        2. Support yourself by grabbing the side handles of the machine, and slowly raise the weight with your legs, toes pointed straight.\n
        3. Pause at the top of the motion, then slowly return to starting position.</string>
    <string name="lat_pulldown">1. Grip the bar with the palms facing forward, your hands need to be spaced out at a distance wider than shoulder width.\n
        2. As you have both arms extended in front of you holding the bar, bring your torso back around 30 degrees while sticking your chest out.\n
        3. Pull the bar down to about chin level or a little lower in a smooth movement whilst squeezing the shoulder blades together.\n
        4. After a second of squeezing, slowly raise the bar back to the starting position when your arms are fully extended.</string>
</resources>