<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_workout"
        android:enabled="true"
        android:icon="@drawable/ic_workout"
        android:title="@string/workouts"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_information"
        android:enabled="true"
        android:icon="@drawable/ic_info"
        android:title="@string/information"
        app:showAsAction="ifRoom" />
</menu>