<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:background="@drawable/bkgrnd"-->
<!--    android:layout_height="match_parent"-->
<!--    android:backgroundTint="#10FFFFFF"-->
<!--    android:backgroundTintMode="src_over"-->
<!--    android:padding="36dp">-->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bkgrnd"
        android:backgroundTint="#10FFFFFF"
        android:backgroundTintMode="src_over"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".HomeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/health_app"
                android:textColor="@color/white"
                android:textSize="66dp"
                android:shadowColor="@color/black"
                android:shadowRadius="30"
                android:shadowDx="1"
                android:shadowDy="1"
                android:textStyle="bold" />

            <TextView
                android:layout_width="236dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/fitness_icon" />

        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"
            android:text="@string/sign_in"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"
            android:text="@string/sign_up"
            android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/guest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_btn"
        android:textColor="@color/white"
        android:layout_marginBottom="36dp"
        android:text="As Guest"
        android:textStyle="bold"/>

    </LinearLayout>
<!--</ScrollView>-->